syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.TypeTests";

package grpc_server.api.protos.messages.type_tests;

message ByteTestDto {
    uint32 byte_field = 1;
    repeated uint32 byte_field_collection = 2;
    google.protobuf.UInt32Value byte_field_nullable = 3;
    ListOfUInt32 byte_field_nullable_collection = 4;
}
